--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redux real-world example</title>
+    <title>React Coding Exercise - GSTV</title>
   </head>
   <body>
     <div id="root">
